--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
   "bugs": {
     "url": "https://github.com/Alejupas/countriesInfo/issues"
   },
-  "homepage": "https://github.com/Alejupas/countriesInfo#readme"
+  "homepage": "https://github.com/Alejupas/countriesInfo#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.3",
+    "nodemon": "^2.0.12"
+  }
 }
