--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGO_CONN_STRING=mongodb+srv://minde_admin:minde333@frankfurtclusteraws.ijidi.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_CONN_STRING=mongodb+srv://minde_admin:minde333@frankfurtclusteraws.ijidi.mongodb.net/citiesDatabase?retryWrites=true&w=majority
+
+PORT = 5000;
