--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sukurti saliu ir miestu informacijos aplikacija",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.12"
   }
 }
